--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "format": "prettier --write .",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
-    "expo": "~48.0.6",
+    "expo": "^48.0.9",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "expo-system-ui": "~2.2.1",
@@ -32,7 +34,12 @@
     "@tsconfig/react-native": "^2.0.3",
     "@types/jest": "^29.5.0",
     "@types/react": "^18.0.29",
-    "@types/react-test-renderer": "^18.0.0"
+    "@types/react-test-renderer": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
+    "eslint": "^8.36.0",
+    "eslint-config-universe": "^11.2.0",
+    "prettier": "^2.8.7"
   },
   "private": true
 }
