--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "^48.0.9",
+    "expo-file-system": "^15.2.2",
     "expo-font": "~11.1.1",
+    "expo-sqlite": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "expo-system-ui": "~2.2.1",
     "react": "18.2.0",
