--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nativenotes",
   "author": "davidelng",
-  "version": "0.2.5",
+  "version": "0.7.5",
   "description": "A note-taking app for my device",
   "keywords": [
     "react",
@@ -27,6 +27,8 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
+    "@gorhom/bottom-sheet": "^4.4.5",
+    "@react-native-community/slider": "^4.4.2",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -36,13 +38,15 @@
     "expo-sqlite": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "expo-system-ui": "~2.2.1",
+    "openai": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.4",
+    "react-native": "0.71.6",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-url-polyfill": "^1.3.0",
     "react-native-web": "~0.18.10",
     "typescript": "^4.9.4"
   },
