--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nativenotes",
   "author": "davidelng",
-  "version": "0.7.5",
+  "version": "0.7.9",
   "description": "A note-taking app for my device",
   "keywords": [
     "react",
@@ -49,7 +49,8 @@
     "react-native-screens": "~3.20.0",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-web": "~0.18.10",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "expo-haptics": "~12.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
